[package]
name = "hello-rocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
uuid = { version = "~1", features = ["serde", "v4"] }
serde = { version = "1.0.197", features = ["derive"] }
